server/scss/_chat.scss
.open-sidebar-btn{
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  height: $nav-height;
  width: $chat-notifcation-bar-width;
  margin-bottom: 2px;
  background-color: $green;

  i {
    color: $gray1;
  }
}
.open-sidebar-btn:active{
  background-color: $green;
}

.bar-btn {
  background-color: $dark2;
  border-bottom: 0.1px solid #3f434a;
  display: flex;
  flex-direction: column;
  height: 80px;
  padding-top: 20px;
  padding-left: 15px;

  * {
    display: block;
    position: absolute;
  }

  i {
    color: $gray1;
    margin-bottom: 20px;
  }

  .badge {
    // width: 60%;
  }
}


.chat-container {
  background-color: #fff;
  border-radius: 5px;
  color: #FFFFFF;
  flex: 0 0 400px;
  height: 100vh;
  position: relative;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
  -webkit-transition: all 200ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
  transition: all 200ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
  transform-origin: right;

  p {
    font-family: $content-font;
  }
  
  li {
    font-family: $title-font;
  }

  @include large-desktop {
    flex: 0 0 400px;
  }
  @include regular-desktop {
    flex: 0 0 360px;
  }
  @include small-desktop {
    flex: 0 0 280px;
    //TODO: looks bad atm. Style chatroom
  }
  @include tablet {
    flex: 0 0 240px;    
    //TODO: looks bad atm. Style chatroom    
  }

}

.chat-container div {
  display: flex;
  flex-direction: column;
  flex: 1;
}
.open {
  display: flex;
  flex-direction: column;
}

.close {
  margin-right: 0em;
  flex: 0 0 0;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transform: translate(75px);
  transform: translate(75px);
  visibility: hidden;
}

#notification-close{
  visibility: hidden;
  width: 0px;
  margin-right: 0em;
  flex: 0 0 0px!important;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  // -webkit-transform: translate(50px);
  // transform: translate(50px);
}

.chat-notification-bar {
  // right: -50;
  flex: 0 0 50px;
  background-color: $dark1;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
  transform-origin: right;
  -webkit-transition: all 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
  transition: all 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
  z-index: 999;
}

.chat-toggle-button {
  border-radius: 0;
  color: #FFFFFF;
  // position: absolute;
  left: 0;
  top: -40;
}

.sidebar-tablist {
  background-color: $gray1 !important;
  margin: 0 !important;
}

.message-compose-container {
  background-color: #fff;
  bottom: 5px;
  display: block;  
  margin: 0 auto;
  position: absolute;
  width: 100%;

  textarea {
    background-color: #fff;
    border: $faint-gray;
    color: $dark3;
    height: 150px;
    width: 100%;
    resize: none;
  }
}

.message-submit {
  background-color: $gray2;
  display: flex;
  justify-content: flex-end;

  button {
    background-color: $green;
    border: none;
    padding: 10px 8px;
  }
}

.chat-header {
    width: 100%;
}

.message-list-container {
  @include users-onine-background-pattern;
  color: black;
  min-height: 200px!important;
  overflow-y: scroll;
  width: 100%;
  word-wrap: break-word;
}

.message-timestamp {
  font-size: 0.8em;
}

.message-container-own {
  @include message-container-styles;

  @include tablet {
    padding: 10px 5px 0 15px;
  }

  article {
    @include bubble-chat-styles($chat-bubble-own);
    &:after {
      right: -10px;
    }
  }
  img {
    @include chat-avatar;
    @include tablet {
      margin: 5px 5px 5px 20px;
      max-height: 50px;
      max-width: 50px;
    }
  }
}

.message-container-other {
  @include message-container-styles; 
  flex-direction: row-reverse;

  @include tablet {
    padding: 10px 15px 0 5px;    
  }

  article {
    @include bubble-chat-styles($gray2);
    &:after {
      left: -10px;
    }
  }

  img {
    @include chat-avatar;
    @include tablet {
    margin: 5px 20px 5px 5px;
    max-height: 50px;
    max-width: 50px;
  }
  }
}

.users-connected-button{
  height: 100px;
}

.sidebar-tabs {
  background-color: $green;
  flex: none !important;

  i {
    color: $gray1;
  }
}

.sidebar-tab {
  color: $dark3;
  height: $nav-height;

  .close-sidebar-btn {
    @include ver-hor-center;
    height: 100%;
    width: $chat-notifcation-bar-width;
      &:hover{
      background-color: $gray1;

      i {
        color: $green;
      }
    }
  }
  
}

